# horcrux

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
UnitTest/: CMakeLists.txt
UnitTest/inc/: base64_tests.h  enc_dec_tests.h  file_split_merge_tests.h
UnitTest/src/: CMakeLists.txt  base64_tests.cpp  enc_dec_tests.cpp  file_split_merge_tests.cpp
include/: base64.h  customexceptions.h  enc_dec.h  file.h  file_split_merge.h
src/: base64.cpp  enc_dec.cpp  file.cpp  file_split_merge.cpp  main.cpp
